--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="images/icon.png" rel="icon"/>
     <title> Notes for exam! </title>
     <style type="text/css">
         body {
