--- a/softeng.html
+++ b/softeng.html
@@ -7,6 +7,7 @@
     <![endif]-->
     <meta charset="UTF-8">
     <title> Software Engineering </title>
+    <link href="images/icon.png" rel="icon"/>
     <style type="text/css">
         body {
             background-color: #b8e6e4;
