--- a/progress.html
+++ b/progress.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Progress </title>
+    <link href="images/icon.png" rel="icon"/>
     <style type="text/css">
         body {
             background-color: #ffe6ff;
@@ -52,7 +53,7 @@
 <h2> Progress </h2>
 <!-- Change value and max after finishing the table of contents for each module -->
 Software Engineering <br>
-<progress value="5" max="18"></progress> 5/18<br><br>
+<progress id="se" value="5" max="18"></progress> <span id="ses"></span> <br><br>
 
 Computational Vision <br>
 <progress value="10" max="13"></progress> 10/13<br><br>
@@ -62,7 +63,7 @@ Models of Computation (<a href="#" onclick="if(document.getElementById('modelsto
 <div id="modelstopics" style="display: none;"> <img src="images/models/topiclist.JPG"/> </div>
 
 Introductory Databases <br>
-<progress id="db" value="5" max="20"></progress> <span id="dbs"></span><br><br>
+<progress id="db" value="6" max="12"></progress> <span id="dbs"></span><br><br>
 
 Professional Computing <br>
 <progress id="pc" value="55" max="100"></progress> <span id="pcs"></span><br><br>
@@ -108,16 +109,21 @@ Natural Language Processing <br>
 <!-- Utils -->
 <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
 <script>
+    // Writes the progress for Software Engineering
+    var seValue = document.getElementById('se').getAttribute('value');
+    var seMax = document.getElementById('se').getAttribute('max');
+    document.getElementById('ses').innerHTML = seValue + "/" + seMax;
 
-    // Writes the percentage progress for Database
+    // Writes the progress for Database
     var dbValue = document.getElementById('db').getAttribute('value');
     var dbMax = document.getElementById('db').getAttribute('max');
-    document.getElementById('dbs').innerHTML = getPercentage(dbValue, dbMax) + "%";
+    document.getElementById('dbs').innerHTML = dbValue + "/" + dbMax;
 
-    // Writes the percentage progress for Professional Computing
+    // Writes the progress for Professional Computing
     var pcValue = document.getElementById('pc').getAttribute('value');
     var pcMax = document.getElementById('pc').getAttribute('max');
-    document.getElementById('pcs').innerHTML = getPercentage(pcValue, pcMax) + "%";
+    document.getElementById('pcs').innerHTML = pcValue + "/" + pcMax;
+    //document.getElementById('pcs').innerHTML = getPercentage(pcValue, pcMax) + "%";
 
     // Function to return the percentage value as integers
     function getPercentage(numerator, denominator) {
