Database: Finished section 6 (50%). updated tbc

--- a/databases.html
+++ b/databases.html
@@ -88,7 +88,13 @@ Table of Contents
         <li><a href="#constraints1"> Primary Key </a></li>
         <li><a href="#constraints2"> Foreign Key </a></li>
     </ul></li>
-    <li><a href="#joins"> Joins </a></li>
+    <li><a href="#joins"> Joins </a><ul>
+        <li><a href="#joins1"> Join Variations </a></li>
+        <li><a href="#joins2"> Set Operations </a></li>
+        <li><a href="#joins3"> Subqueries </a></li>
+        <li><a href="#joins4"> Groups </a></li>
+        <li><a href="#joins5"> Views </a></li>
+    </ul></li>
     <li><a href="#jdbc"> Java Database Connection </a></li>
     <li><a href="#transaction"> Transaction </a></li>
     <li><a href="#dbdesign"> Database Designs </a></li>
